--- a/ui/settings.html
+++ b/ui/settings.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
 <html>
 
 <head>
 	<title>Lobster Protect - Settings</title>
 	<link rel="stylesheet" href="settings.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Coral+Pixels">
 	<link rel="shortcut icon" href="img/logo64.png" type="image/x-icon">
+
 </head>
 
 <body>
@@ -17,7 +20,12 @@
 			<h2>Settings</h2>
 			<table>
 				<tr>
-					<td>Whitelist mode</td>
+					<td>
+						<div class="tooltip">Whitelist mode <sup style="color: #fff; font-size:xx-small;">(?)</sup>
+							<span class="tooltiptext">Any site that <i>isn't</i> on the site list triggers Lobster
+								Protect.</span>
+						</div>
+					</td>
 					<td>
 						<label class="slider">
 							<input class="inv-checkbox" type="checkbox" id="whitelist-checkbox">
@@ -26,7 +34,15 @@
 					</td>
 				</tr>
 				<tr>
-					<td>Close browser on trigger</td>
+					<td>
+						<div class="tooltip">Close window on trigger <sup
+								style="color: #fff; font-size:xx-small;">(?)</sup>
+							<span class="tooltiptext">Self-explanatory, when lobster protect is triggered, it makes a
+								call to <a
+									href="https://developer.chrome.com/docs/extensions/reference/api/windows#method-remove">chrome.windows.remove()</a>
+								on the current window.</span>
+						</div>
+					</td>
 					<td>
 						<label class="slider">
 							<input class="inv-checkbox" type="checkbox" id="closeont-checkbox">
@@ -35,11 +51,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td>Debug mode
-						<sup><span style="color:tomato; font-weight: bold; font-size: 10px;"
-								title="Turn this setting on if you want to report a bug.">
-								(?)
-							</span></sup>
+					<td>
+						<div class="tooltip">Debug mode <sup style="color: #fff; font-size:xx-small;">(?)</sup>
+							<span class="tooltiptext">Makes the DevTools console more chatty.
+							</span>
+						</div>
 					</td>
 					<td>
 						<label class="slider">
@@ -52,24 +68,23 @@
 		</div>
 		<div class="list_conf_area">
 			<div id="site_prompt">
-				<p style="display: inline-block;">Add hostname:</p>
+				<p style="text-align: center; font-size: 17px;">Add hostname:</p>
 				<input type="text" id="addsite-text" placeholder="www.hostname.com">
 				<input type="button" id="addsite-button" value="+">
 			</div>
 
-			<div class="list_area">
-				<h2>Sites</h2>
-				<ul style="list-style-type:none;" id="site_list">
-				</ul>
-			</div>
+			<table id="list_area">
+				<th>Hostname</th>
+				<th>Options</th>
+			</table>
 		</div>
 	</div>
 </body>
-
 <footer id="credits">Background render by <a
 		href="https://unsplash.com/@marksans?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Mark
 		Sans</a> on <a
 		href="https://unsplash.com/photos/a-group-of-mountains-that-are-in-the-sky-3jj4-HXXa_0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
 </footer>
+<script src="settings.js"></script>
 
 </html>
