Before implementing chrome.storage shenanigans

--- a/ui/settings.html
+++ b/ui/settings.html
@@ -52,8 +52,29 @@
 				</tr>
 				<tr>
 					<td>
-						<div class="tooltip">Debug mode <sup style="color: #fff; font-size:xx-small;">(?)</sup>
-							<span class="tooltiptext">Makes the DevTools console more chatty.
+						<div class="tooltip">Trigger happy mode<sup style="color: #fff; font-size:xx-small;">(?)</sup>
+							<span class="tooltiptext">Allows "good enough" matches.
+								Check
+								the <a href="https://github.com/hillthebingus">GitHub</a> for more information.
+							</span>
+						</div>
+					</td>
+					<td>
+						<label class="slider">
+							<input class="inv-checkbox" type="checkbox" id="trigger-happy-checkbox">
+							<span class="slider_switch"></span>
+						</label>
+					</td>
+				</tr>
+				<tr>
+					<td>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<div class="tooltip" style="font-size: 20px;">Debug mode <sup
+								style="color: #fff; font-size:xx-small;">(?)</sup>
+							<span class="tooltiptext" style="font-size: 12px">Makes the DevTools console more chatty.
 							</span>
 						</div>
 					</td>
