Modified README and created TODO

--- a/ui/settings.html
+++ b/ui/settings.html
@@ -55,7 +55,7 @@
 						<div class="tooltip">Trigger happy mode<sup style="color: #fff; font-size:xx-small;">(?)</sup>
 							<span class="tooltiptext">Allows "good enough" matches.
 								Check
-								the <a href="https://github.com/hillthebingus">GitHub</a> for more information.
+								the <a href="https://github.com/hillthebingus/lobster-protect">GitHub</a> for more information.
 							</span>
 						</div>
 					</td>
@@ -68,6 +68,7 @@
 				</tr>
 				<tr>
 					<td>
+						<hr>
 					</td>
 				</tr>
 				<tr>
