Altered folder structure and a few minor changes.

--- a/ui/settings.html
+++ b/ui/settings.html
@@ -75,7 +75,7 @@
 					<td>
 						<div class="tooltip" style="font-size: 20px;">Debug mode <sup
 								style="color: #fff; font-size:xx-small;">(?)</sup>
-							<span class="tooltiptext" style="font-size: 12px">Makes the DevTools console more chatty.
+							<span class="tooltiptext">Makes the DevTools console more chatty.
 							</span>
 						</div>
 					</td>
