Implemented trigger happy mode

--- a/src/options_page/index.html
+++ b/src/options_page/index.html
@@ -239,7 +239,30 @@
 							<span class="switch-border"></span>
 						</label>
 
-						<!-- ### Last row. ### -->
+						<!-- ### new row. ### -->
+
+						<!-- option -->
+						<div class="tooltip-container">
+							Trigger-happy mode
+							<span class="tooltip-text">
+								Treats the site list as a list of keywords to look for in the hostname instead of explicit hostnames.
+								E.g: <br>
+								An entry with a name of <code>discord</code> or <code>www.discord.com</code> won't trigger when you're
+								on
+								<code>discord.com</code> if Trigger-happy is disabled, because neither <code>discord</code> nor
+								<code>www.discord.com</code>
+								match <strong>exactly</strong> with <code>discord.com</code>.
+							</span>
+						</div>
+
+						<!-- button -->
+						<label class="switch-container dirty">
+							<input type="checkbox" class="inv-checkbox" id="th-inv-checkbox">
+							<span class="switch-bg"></span>
+							<span class="switch-border"></span>
+						</label>
+
+						<!-- ### new row. ### -->
 
 						<!-- option -->
 						<div class="tooltip-container">
