Changed a few things regarding weird looking elements.
Such as the navbar having the wrong cursor type, tooltips being too
small, and the preset buttons being <a>s instead of <label>s

--- a/src/options_page/index.html
+++ b/src/options_page/index.html
@@ -155,17 +155,21 @@
 
 					<!-- The placeholder buttons -->
 					<div id="presets-container">
-						<a href="#" class="preset-hitbox" preset-name-id="Lobster">
+						<label class="preset-hitbox">
 							<span class="preset-name">Lobster 🦞</span>
-						</a>
+							<input type="button" class="inv-button preset-button">
+						</label>
 
-						<a href="#" class="preset-hitbox" preset-name-id="ResponsibleAdult">
+						<label class="preset-hitbox">
 							<span class="preset-name">Responsible Adult 👷‍♂️</span>
-						</a>
+							<input type="button" class="inv-button preset-button"
+								args='["www.instagram.com", "www.tiktok.com", "www.facebook.com", "www.reddit.com", "old.reddit.com"]'>
+						</label>
 
-						<a href="#" class="preset-hitbox" preset-name-id="NoNoSites">
+						<label class="preset-hitbox">
 							<span class="preset-name">No-no sites ❌</span>
-						</a>
+							<input type="button" class="inv-button preset-button">
+						</label>
 					</div>
 				</div>
 			</section>
