Refactored code regarding placeholders
Also fixed the placeholder buttons looking weird after turning them into
labels

--- a/src/options_page/index.html
+++ b/src/options_page/index.html
@@ -149,8 +149,9 @@
 					</span>
 
 					<span id="placeholder-body">
-						It seems like you don't have any sites loaded... No worries! You can add some yourself —
-						Or use one of these configuration presets! (follow the instructions on the github)
+						It seems like you don't have any sites loaded... No worries! You can add some yourself using the input
+						above! —
+						Or use one of these sitelist presets!
 					</span>
 
 					<!-- The placeholder buttons -->
@@ -208,7 +209,8 @@
 						</div>
 
 						<!-- button -->
-						<input type="text" class="input-prompt small-prompt dirty" placeholder="www.hostname.com" id="redirect-url-input">
+						<input type="text" class="input-prompt small-prompt dirty" placeholder="www.hostname.com"
+							id="redirect-url-input">
 
 					</div>
 
