Added the About section

--- a/src/options_page/index.html
+++ b/src/options_page/index.html
@@ -272,6 +272,26 @@
 							<span class="switch-border"></span>
 						</label>
 					</div>
+
+				</div>
+			</section>
+			<!--?reg-->
+
+			<section id="about-section" class="inner content-hide">
+				<div id="about-section-bg">
+					<div class="area-container">
+						<img src="../resources/img/logo128.png" alt="">
+						<p class="about-text">
+							<span class="bigger">Thank you for choosing LobsterProtect ♥️</span><br>
+							Seriously. It means a lot to me.<br><br>
+							Developed by <a href="https://github.com/hillthebingus">hillthebingus</a> on GitHub.<br>
+							To report any bugs, read about the functionality, my promises to this project as a developer, or simply
+							just read about my motivations for this project — Feel free to check out the <a
+								href="https://github.com/hillthebingus/lobster-protect">GitHub for this project</a>!<br><br>
+							Right now this project is only maintained by one person, if you wish to help me maintain this project or
+							add new features, feel free to open a Pull Request!<br>
+						</p>
+					</div>
 				</div>
 			</section>
 		</div>
