--- a/src/options_page/login.html
+++ b/src/options_page/login.html
@@ -1,30 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Login | LobsterProtect</title>
 
-		<link href="styles/vars.css" rel="stylesheet">
-		<link href="styles/classes.css" rel="stylesheet">
-		<link href="styles/ids.css" rel="stylesheet">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Register | LobsterProtect</title>
 
-		<script src="js/security.js"></script>
-	</head>
 
-	<body>
-		<main id="login-div">
-			<div id="text-area">
-				<h2 id="welcome-message">Welcome back {user}!</h2>
-				<p>Please log into your LobsterProtect dashboard.</p>
-			</div>
+	<!-- fonts -->
+	<!-- ¿reg -->
+	<!-- Playfair -->
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+		rel="stylesheet">
 
-			<div id="input-area">
-				<input type="text" name="username" placeholder="Username">
-				<input type="password" name="password" placeholder="Pass">
-				<input type="button" name="register" value="Login">
-			</div>
+	<!-- Jost -->
+	<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
+		rel="stylesheet">
 
-		</main>
-	</body>
+	<!-- Roboto Flex -->
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
+		rel="stylesheet">
+	<!-- ?reg -->
+
+	<link rel="stylesheet" href="styles/vars.css">
+	<link rel="stylesheet" href="styles/login.css">
+
+	<script src="js/security.js"></script>
+</head>
+
+<body>
+	<div class="wrapper">
+		<section class="box title-area">
+			<h2 class="grad-underline title normal-wrap" id="welcome-message">Welcome back {user}!</h2>
+		</section>
+
+		<div class="box input-container">
+			<h3 class="grad-underline title title-separation">Login</h3>
+
+			<label class="text-input-hb">
+				<span class="text-input-label">Password</span>
+				<input class="text-input-text" type="password" name="password" placeholder=" ">
+			</label>
+
+			<label class="button-hb">
+				<span class="button-label">Login</span>
+				<input type="button" class="button-inv-button" id="login-button">
+			</label>
+
+		</div>
+	</div>
+</body>
+
 </html>
