Tweaked registration page
Just added a bit of text

--- a/src/options_page/redirect.html
+++ b/src/options_page/redirect.html
@@ -5,11 +5,24 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Redirecting you to the appropriate page...</title>
-	<script src="js/redirect.js"> </script>
+	<script src="js/redirect.js"></script>
+	<style>
+		html {
+			background: black;
+		}
+
+		p {
+			color: floralwhite;
+		}
+	</style>
 </head>
 
 <body>
-	Figuring out if you're already an user or not..
+	<p>
+		Checking if you're already an user...<br>
+		If you're stuck here you likely found a bug. Make sure to report it on
+		this project's <a href="https://www.github.com/hillthebingus/lobster-protect">GitHub</a>.
+	</p>
 </body>
 
 </html>
