Implemented the Register button
For when the user wishes to Register at a later time instead of On
install

--- a/src/options_page/main.html
+++ b/src/options_page/main.html
@@ -110,6 +110,21 @@
 			<button id="save-button" class="inv-button"></button>
 		</label>
 
+		<!-- The Register button this should only show up if we chose to skip registration -->
+
+		<label id="register-button" class="button-hb save-button separate-bottom">
+			<span class="button-bg">
+				<span class="button-text">
+					<!-- icon -->
+					<span class="material-icons navbar-icon">
+						login
+					</span>
+					Register
+				</span>
+			</span>
+			<button class="inv-button"></button>
+		</label>
+
 		<div class="outer">
 			<!-- Site list section -->
 			<section id="sitelist-section" class="inner content-show">
