Fixed an issue with the way the Login Welcome message looked

--- a/src/options_page/login.html
+++ b/src/options_page/login.html
@@ -30,8 +30,8 @@
 
 <body>
 	<div class="wrapper">
-		<section class="box title-area">
-			<h2 class="grad-underline title normal-wrap" id="welcome-message">Welcome back {user}!</h2>
+		<section class="box title-area welcome-login">
+			<h2 class="grad-underline title normal-wrap " id="welcome-message">Welcome back {user}!</h2>
 		</section>
 
 		<div class="box input-container">
