Implemented the CLOSE_TAB trigger

--- a/src/options_page/main.html
+++ b/src/options_page/main.html
@@ -129,6 +129,7 @@
 			<!-- Site list section -->
 			<section id="sitelist-section" class="inner content-show">
 				<!-- ¿reg -->
+
 				<h1 class="title-2 grad-underline">Site list</h1>
 
 				<!-- Addsite button -->
@@ -214,7 +215,8 @@
 						<!-- button -->
 						<select class="select-prompt dirty" id="action-select">
 							<option value="1">Close the browser.</option>
-							<option value="2">Redirect to another site.</option>
+							<option value="2">Close the tab.</option>
+							<option value="3">Redirect to another site.</option>
 						</select>
 
 						<!-- ### New row. ### -->
@@ -297,6 +299,7 @@
 			<!--?reg-->
 
 			<section id="about-section" class="inner content-hide">
+				<!-- ¿reg -->
 				<div id="about-section-bg">
 					<div class="area-container">
 						<img src="../resources/img/logo128.png" alt="">
@@ -313,6 +316,7 @@
 					</div>
 				</div>
 			</section>
+			<!-- ?reg -->
 		</div>
 	</div>
 	<!--#######################################################-->
