--- a/src/options_page/main.html
+++ b/src/options_page/main.html
@@ -175,20 +175,20 @@
 						<label class="preset-hitbox">
 							<span class="preset-name">Lobster 🦞</span>
 							<input type="button" class="inv-button preset-button"
-								sitelist='["adfoc.us", "armortrims.com", "artfight.net", "aternos.org", "bloxorz.io", "curseforge.com", "discord.com", "garticphone.com", "jackbox.tv", "live.com", "mail.google.com", "mapmaking.fr", "minecraft.net", "nexusmods.com", "optifine.net", "planetminecraft.com", "skribbl.io", "spotify.com", "stardew.info", "stardewvalleywiki.com", "vanillatweaks.net"]'
-								preset_opts='{ "debug": false, "whitelist": true, "trigger_happy": true, "on_trigger": {"action": 2, "redirect": "www.biblegateway.com"} }'>
+								sitelist='["adfoc.us", "armortrims.com", "artfight.net", "aternos.org", "bloxorz.io", "curseforge.com", "discord.com", "garticphone.com", "jackbox.tv", "live.com", "mail.google.com", "mapmaking.fr", "minecraft.net", "nexusmods.com", "optifine.net", "planetminecraft.com", "skribbl.io", "spotify.com", "stardew.info", "stardewvalleywiki.com", "vanillatweaks.net", "biblegateway.com", "google.com"]'
+								preset_opts='{ "debug": false, "whitelist": true, "trigger_happy": true, "on_trigger": {"action": 2, "redirect": ""} }'>
 						</label>
 
 						<label class="preset-hitbox">
 							<span class="preset-name">Responsible Adult 👷‍♂️</span>
 							<input type="button" class="inv-button preset-button"
 								sitelist='["www.instagram.com", "www.tiktok.com", "www.facebook.com", "www.reddit.com", "old.reddit.com"]'
-								preset_opts='{ "debug": false, "whitelist": false, "trigger_happy": false, "on_trigger": {"action": 2, "redirect": "www.github.com"} }'>
+								preset_opts='{ "debug": false, "whitelist": false, "trigger_happy": false, "on_trigger": {"action": 3, "redirect": "www.github.com"} }'>
 						</label>
 
 						<label class="preset-hitbox">
 							<span class="preset-name">No-no sites ❌</span>
-							<input type="button" class="inv-button preset-button" sitelist='[]'
+							<input type="button" class="inv-button preset-button" sitelist='["omegle.com", "chatroulette.com", "tinder.com", "888casino.com", "casumo.com", "betonline.ag", "freespin.com", "pornhub.com", "youporn.com", "xvideos.com", "chaturbate.com", "bongacams.com", "livejasmin.com"]'
 								preset_opts='{ "debug": false, "whitelist": false, "trigger_happy": true, "on_trigger": {"action": 1, "redirect": ""} }'>
 						</label>
 					</div>
