ui: Made the registration site more explicit.

--- a/src/options_page/register.html
+++ b/src/options_page/register.html
@@ -37,9 +37,10 @@
 		<section class="box text-area">
 			<h3 class="grad-underline title title-separation">Please read...</h3>
 			<p>
+				This is NOT a Login, all of this information is stored locally in your machine. It is recommended you avoid using real account credentials.<br><br>
 				If you're going to register your dashboard, keep in mind the following:<br><br>
-				<span class="important">These credentials are local to your machine, which means you won't be able to change
-					them later since LobsterProtect can't really validate your identity. So make sure to make them
+				<span class="important">Since these credentials are local to your machine, you won't be able to change
+					them later if you forget them since LobsterProtect can't really validate your identity; Make sure to make them
 					memorable.</span>
 			</p>
 		</section>
